// 렌탈 코드 마스터 테이블
Table rental_code_master {
  rental_code varchar [pk, note: '렌탈 코드']
  rental_code_name varchar [note: '렌탈코드 명']
  rental_code_description varchar [note: '렌탈코드 명']
  current_term integer [note: '계약회차']
  term1_period integer [note: '1회차 계약']
  term2_period integer [note: '2회차 계약']
  term3_period integer [note: '3회차 계약']
  term4_period integer [note: '4회차 계약']
  term5_period integer [note: '5회차 계약']
  contract_pricing_type varchar [note: '요금체계']
  contract_duration integer [note: '렌탈기간']
  commitment_duration integer [note: '약정기간']
  lease_type varchar [note: '리스유형']
  remark varchar [note: '비고']
  is_active boolean [note: '사용여부']
  create_time timestamp [note: '생성 일시']
  update_time timestamp [note: '수정 일시']

  Note: 'Master table for rental information'
}

// 렌탈 분배 마스터 테이블
Table rental_distribution_master {
  id serial [pk, note: 'ID']
  material_series_code varchar [note: '품목코드']
  rental_distribution_type varchar [note: '렌탈 분할(안분)유형']
  onetime_price NUMERIC(38,2) [note: '일시불 가격']
  membership_price NUMERIC(38,2) [note: '멤버십 가격']
  membership_dcprice_c24 NUMERIC(38,2) [note: '멤버십 2년 약정시 할인']
  free_service_duration integer [note: '무상 서비스 기간']
  start_date date [note: '효력 시작일']

  Note: 'Master table for rental distribution information'
}

// 렌탈 가격 마스터 테이블
Table rental_pricing_master {
  id integer [pk, note: 'ID']
  material_series_code varchar [note: '품목코드']
  rental_code varchar [note: '렌탈코드']
  material_care_type varchar [note: '관리방식']
  price NUMERIC(38,2) [note: '가격']
  currency varchar(3) [note: '통화']
  tax_included char [note: 'includeTax']
  period_type varchar [note: '기준']
  start_date date [note: '생성 일시']

  Note: 'Master table for rental pricing information'
}

// 렌탈 분배 규칙 테이블
Table rental_distribution_rule {
  id bigserial [pk, note: '아이디']
  material_id varchar [note: '자재ID']
  material_series_code varchar [note: '품목코드']
  rental_code varchar [note: '렌탈 코드']
  material_care_type varchar [note: '제품 관리방식']
  lease_type varchar [note: '회계처리']
  commitment_duration integer [note: '약정기간']
  adjusted_commitment_duration integer [note: '조정 약정기간']
  dist_value_m01 NUMERIC(38,2)
  dist_value_r01 NUMERIC(38,2)
  dist_value_r02 NUMERIC(38,2)
  dist_value_r03 NUMERIC(38,2)
  dist_value_s01 NUMERIC(38,2)
  dist_ratio_m01 NUMERIC(38,2)
  dist_ratio_r01 NUMERIC(38,2)
  dist_ratio_r02 NUMERIC(38,2)
  dist_ratio_r03 NUMERIC(38,2)
  dist_ratio_s01 NUMERIC(38,2)
  dist_price_m01 NUMERIC(38,2)
  dist_price_r01 NUMERIC(38,2)
  dist_price_r02 NUMERIC(38,2)
  dist_price_r03 NUMERIC(38,2)
  dist_price_s01 NUMERIC(38,2)
  start_date date [note: '효력 시작일']
  create_time timestamp [default: `CURRENT_TIMESTAMP`, note: '생성 일시']
  update_time timestamp [default: `CURRENT_TIMESTAMP`, note: '수정 일시']

  indexes {
    (material_id, rental_code, material_care_type, start_date) [unique]
  }

  Note: 'Rules table for rental distribution'
}

// 렌탈 자산 감가상각 마스터 테이블
Table rental_asset_depreciation_master {
  id serial [pk, increment, note: 'id']
  material_id varchar [not null, note: '자재ID']
  useful_life int [note: '내용연수']
  salvage_value NUMERIC(38,2) [not null, note: '잔존가치']
  currency varchar [not null, note: '통화']
  depreciation_method varchar [not null, note: '상각방법']
  start_date date [note: '시작일']

  Note: '렌탈자산 상각 마스터'
}

// 렌탈 자산 이력 테이블
Table rental_asset_history {
  id serial [pk, increment, note: 'id']
  serial_number varchar [not null, note: '시리얼번호']
  material_id varchar [not null, note: '자재ID']
  depreciation_count int [note: '감가상각회차']
  depreciation_date date [note: '감가상각일']
  acquisition_cost NUMERIC(38,2) [not null, note: '취득원가']
  depreciation_expense NUMERIC(38,2) [note: '감가상각비']
  accumulated_depreciation NUMERIC(38,2) [note: '감가상각누계액']
  book_value NUMERIC(38,2) [not null, note: '장부가액']
  contract_id varchar [not null, note: '계약ID']
  contract_date date [not null, note: '계약일']
  contract_status varchar [not null, note: '계약상태']
  order_id varchar [not null, note: '주문ID']
  order_item_id varchar [not null, note: '주문아이템ID']
  customer_id varchar [not null, note: '고객ID']
  event_type varchar [not null, note: '이벤트 구분']
  hash varchar [not null, note: '해시 값(중복체크)']
  create_time timestamptz [not null, default: `CURRENT_TIMESTAMP`, note: '생성 일시']

  Note: '렌탈자산 이력'
}

// 렌탈 자산 감가상각 스케줄 테이블
Table rental_asset_depreciation_schedule {
  id serial [pk, increment, note: 'id']
  serial_number varchar [not null, note: '시리얼번호']
  depreciation_count int [not null, note: '감가상각회차']
  depreciation_date date [not null, note: '감가상각일']
  currency varchar [not null, note: '통화']
  beginning_book_value NUMERIC(38,2) [not null, note: '기초 장부가액']
  depreciation_expense NUMERIC(38,2) [not null, note: '감가상각비']
  ending_book_value NUMERIC(38,2) [not null, note: '기말 장부가액']
  accumulated_depreciation NUMERIC(38,2) [not null, note: '감가상각누계액']
  create_time timestamptz [not null, default: `CURRENT_TIMESTAMP`, note: '생성 일시']

  Note: '렌탈자산 이력'
}

// 금융 렌탈자산 상각 스케줄 테이블
Table rental_financial_depreciation_schedule {
  id varchar(50) [pk, note: '테이블 id']
  tx_id varchar(50) [not null, note: '그룹 id']
  order_item_id varchar(50) [not null, note: '주문 아이템 id']
  contract_id varchar(50) [not null, note: '계약 id']
  depreciation_count int [note: '감가삼각 회차']
  depreciation_year_month varchar(10) [note: '년월']
  depreciation_bill_year_month varchar(10) [note: '청구 년월']
  currency varchar(10) [note: '통화']
  depreciation_rental_amount numeric(15,4) [note: '렌탈료']
  depreciation_book_value numeric(15,4) [note: '장부 금액']
  depreciation_present_value numeric(15,4) [note: '현재 가치(pv)']
  depreciation_current_difference numeric(15,4) [note: '현 할차']
  depreciation_interest_income numeric(15,4) [note: '이자 수익']
  create_time timestamptz [default: `CURRENT_TIMESTAMP`, note: '생성 시간']

  Note: '금융 렌탈자산 상각 스케줄'
}

// 렌탈 금융자산 이력 테이블
Table rental_financial_depreciation_history {
  id varchar(50) [pk, note: '테이블 id']
  tx_id varchar(50) [note: '그룹 id']
  doc_hash_code varchar(64) [note: '해시 코드']
  order_id varchar(50) [not null, note: '주문 id']
  order_item_id varchar(50) [not null, note: '주문 아이템 id']
  customer_id varchar(50) [not null, note: '고객 id']
  serial_number varchar(100) [note: '시리얼 번호']
  contract_id varchar(50) [note: '계약 id']
  material_id varchar(50) [note: '자재 id']
  base_date date [not null, note: '기준일']
  contract_date date [note: '계약일']
  material_series_code varchar(50) [note: '품목 코드']
  contract_end_date date [note: '만기일']
  contract_period int [note: '약정 개월']
  interest_rate numeric(5,2) [note: '이자율']
  rental_amount numeric(15,4) [note: '렌탈료']
  rental_amount_for_goods numeric(15,4) [note: '렌탈료(재화)']
  depreciation_count int [note: '감가삼각 회차']
  depreciation_year_month varchar(10) [note: '년월']
  depreciation_bill_year_month varchar(10) [note: '청구 년월']
  currency varchar(10) [note: '통화']
  depreciation_book_value numeric(15,4) [note: '장부 금액']
  depreciation_present_value numeric(15,4) [note: '현재 가치(pv)']
  depreciation_current_difference numeric(15,4) [note: '현 할차']
  depreciation_interest_income numeric(15,4) [note: '이자 수익']
  cumulative_interest_income numeric(15,4) [note: '이자 수익(누계)']
  initial_book_value numeric(15,4) [note: '최초 장부 금액']
  initial_present_value numeric(15,4) [note: '최초 현재 가치(pv)']
  initial_current_difference numeric(15,4) [note: '최초 현 할차']
  update_time timestamptz [note: '수정일']
  create_time timestamptz [default: `CURRENT_TIMESTAMP`, note: '생성일']
  rental_event_type varchar(50) [note: '이벤트 구분']

  Note: '렌탈 금융자산 이력'
}

// 금융 이자율 테이블
Table rental_financial_interest_master {
  id bigserial [pk, note: '고유 식별자']
  target_month varchar(7) [not null, note: '기준월 (예: 2024-07)']
  interest_rate numeric(5,2) [not null, note: '이자율 (소수점 두 자리까지)']
  create_time timestamp [default: `CURRENT_TIMESTAMP`, note: '등록일시 (데이터 생성 시간)']

  Note: '금융리스 이자율 관리 테이블'
}


// 관계 정의
Ref: rental_pricing_master.rental_code > rental_code_master.rental_code
Ref: rental_pricing_master.material_series_code > rental_distribution_master.material_series_code
Ref: rental_distribution_rule.rental_code > rental_code_master.rental_code
Ref: rental_distribution_rule.material_series_code > rental_distribution_master.material_series_code
